# frappe-ai-agent

./: .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/ai_agent/: __init__.py  app.py  config.py
src/ai_agent/agent/: prompts.py  tool_errors.py
src/ai_agent/blocks/: models.py  parser.py  validators.py
src/ai_agent/integrations/: frappe_history.py  llm.py  mcp.py
src/ai_agent/middleware/: sid.py
src/ai_agent/observability/: __init__.py
src/ai_agent/services/: chat.py  health.py
src/ai_agent/transport/: sse.py  sse_events.py
tests/features/: chat_flow.feature  error_handling.feature
tests/features/steps/: test_chat_steps.py
tests/unit/: test_app_factory.py  test_blocks.py  test_chat_service.py  test_config.py  test_frappe_history_client.py  test_health_service.py  test_integrations.py  test_llm_ollama.py  test_mcp_client_factory.py  test_middleware.py  test_prompts.py  test_rest.py  test_sid_middleware.py  test_sse_events.py  test_sse_route.py  test_tool_errors.py
